# object_detection_msgs

./: CMakeLists.txt  package.xml
object_detection_msgs/: package.xml
object_detection_msgs/msg/: Object.msg  ObjectArray.msg  ObjectStamped.msg
