<?xml version="1.0"?>
<package format="2">

  <name>object_detection_msgs</name>
  <version>0.0.0</version>
  <description>The object_detection_msgs package</description>
  <maintainer email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</maintainer>

  <license>BSD</license>
  
  <url type="website">http://wiki.ros.org/object_detection_msgs</url>
  <author email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
